--- a/cardDetailPage.html
+++ b/cardDetailPage.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <meta name="viewport" content="width=750, use-scalable=no">
+
 		<title>票信通-我的发布详情页</title>
 		
 		<link rel="stylesheet" type="text/css" href="./css/index.css">
